@@ -12,6 +12,8 @@ import fr.entity.Prestation;
 import fr.enums.TablesEnum;
 import fr.repository.ImageRepository;
 import fr.repository.PrestationRepository;
+import java.io.InputStream;
+import java.net.URL;
 
 
 @Component
@@ -25,7 +27,7 @@ public class ImageFixtures {
 
     @Autowired
     private Fixtures fixtures;
-    private static final String IMAGE_PATH = "src/main/resources/imageFixtures/";
+    private static final String IMAGE_PATH = "imageFixtures/";
 
     public void prepareFixtures() {
 	    String table = TablesEnum.IMAGE.getTableName();
@@ -35,13 +37,21 @@ public class ImageFixtures {
         
             for (Integer i = 1; i <= numberOfPrestations; i++) {
                 try {
-                    byte[] imageData = loadImageData(IMAGE_PATH + i.toString()+".jpg");
-                    Image image = new Image(imageData);
-                    image.setId(i);
-                    Prestation prestation = new Prestation();
-                    prestation = prestationRepository.getReferenceById(i);
-                    image.setPrestation(prestation);
-                    imageRepository.save(image);
+                    byte[] imageData = loadImageData(i.toString()+".jpg");
+
+                    if (imageData != null) {
+
+                        System.out.println("Image chargée avec succès. Taille du tableau de bytes : " + imageData.length);
+                        Image image = new Image(imageData);
+                        image.setId(i);
+                        Prestation prestation = new Prestation();
+                        prestation = prestationRepository.getReferenceById(i);
+                        image.setPrestation(prestation);
+                        imageRepository.save(image);
+
+                    } else {
+                        System.out.println("Le fichier n'a pas pu être trouvé !");
+                    }
                 } catch (Exception e) {
                         e.printStackTrace();
                 } 
@@ -51,13 +61,21 @@ public class ImageFixtures {
             for (Integer i = 1; i <= numberOfPrestations; i++) {
                 try {
                     Integer j = i+10;
-                    byte[] imageData = loadImageData(IMAGE_PATH + j.toString()+".jpg");
-                    Image image = new Image(imageData);
-                    image.setId(i+10);
-                    Prestation prestation = new Prestation();
-                    prestation = prestationRepository.getReferenceById(i);
-                    image.setPrestation(prestation);
-                    imageRepository.save(image);
+                    byte[] imageData = loadImageData(j.toString()+".jpg");
+
+                    if (imageData != null) {
+
+                        System.out.println("Image chargée avec succès. Taille du tableau de bytes : " + imageData.length);
+                        Image image = new Image(imageData);
+                        image.setId(i+10);
+                        Prestation prestation = new Prestation();
+                        prestation = prestationRepository.getReferenceById(i);
+                        image.setPrestation(prestation);
+                        imageRepository.save(image);
+
+                    } else {
+                        System.out.println("Le fichier n'a pas pu être trouvé !");
+                    }
                 } catch (Exception e) {
                     e.printStackTrace();
                 } 
@@ -67,10 +85,11 @@ public class ImageFixtures {
     }
 
     private static byte[] loadImageData(String imagePath) throws IOException {
-        String currentDirectory = System.getProperty("user.dir");
-        imagePath = currentDirectory + File.separator + imagePath;;
-        Path path = Paths.get(imagePath);
-        return Files.readAllBytes(path);
+        URL resourceUrl = ImageFixtures.class.getClassLoader().getResource(IMAGE_PATH + imagePath);
+        System.out.println(resourceUrl);
+        InputStream inputStream = ImageFixtures.class.getClassLoader().getResourceAsStream(IMAGE_PATH + imagePath);
+
+        return inputStream.readAllBytes();
     }
 
 }
